--- a/PlantUmlEditor/Properties/Settings.settings
+++ b/PlantUmlEditor/Properties/Settings.settings
@@ -5,5 +5,11 @@
     <Setting Name="PlantUmlJarPath" Type="System.String" Scope="Application">
       <Value Profile="(Default)">d:\soft\plantuml.jar</Value>
     </Setting>
+    <Setting Name="DownloadUrl" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">http://plantumleditor.googlecode.com/files/PlantUMLSetup.exe</Value>
+    </Setting>
+    <Setting Name="SetupExeName" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">PlantUmlSetup.exe</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
