--- a/PlantUmlEditor/app.config
+++ b/PlantUmlEditor/app.config
@@ -10,6 +10,12 @@
             <setting name="PlantUmlJarPath" serializeAs="String">
                 <value>d:\soft\plantuml.jar</value>
             </setting>
+            <setting name="DownloadUrl" serializeAs="String">
+                <value>http://plantumleditor.googlecode.com/files/PlantUMLSetup.exe</value>
+            </setting>
+            <setting name="SetupExeName" serializeAs="String">
+                <value>PlantUmlSetup.exe</value>
+            </setting>
         </PlantUmlEditor.Properties.Settings>
     </applicationSettings>
 <startup><supportedRuntime version="v2.0.50727" sku="Client"/></startup></configuration>
