--- a/Utilities/Utilities.csproj
+++ b/Utilities/Utilities.csproj
@@ -52,6 +52,7 @@
     <Compile Include="BackgroundWork.cs" />
     <Compile Include="OldWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UpdateChecker.cs" />
     <Compile Include="WeakReference.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
