ADD: Ctrl+S keyboard shortcut. FIX: Delay in design refresh upon first load.

--- a/Utilities/Utilities.csproj
+++ b/Utilities/Utilities.csproj
@@ -49,7 +49,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BackgroundWork.cs" />
+    <Compile Include="ParallelWork.cs" />
     <Compile Include="OldWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UpdateChecker.cs" />
