--- a/PlantUmlEditor/PlantUmlEditor.csproj
+++ b/PlantUmlEditor/PlantUmlEditor.csproj
@@ -120,8 +120,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="TextInputToVisibilityConverter.cs" />
-    <Compile Include="ValueConverters.cs" />
+    <Compile Include="Converters\TextInputToVisibilityConverter.cs" />
+    <Compile Include="Converters\ValueConverters.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
