--- a/Test.Utilities/Test.Utilities.csproj
+++ b/Test.Utilities/Test.Utilities.csproj
@@ -68,7 +68,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TestBackgroundThread.cs" />
+    <Compile Include="TestParallelWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
