--- a/Utilities/Utilities.csproj
+++ b/Utilities/Utilities.csproj
@@ -53,7 +53,7 @@
     <Compile Include="OldWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UpdateChecker.cs" />
-    <Compile Include="WeakReference.cs" />
+    <Compile Include="Weak.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
