--- a/PlantUmlEditor/Properties/Settings.settings
+++ b/PlantUmlEditor/Properties/Settings.settings
@@ -6,10 +6,16 @@
       <Value Profile="(Default)">d:\soft\plantuml.jar</Value>
     </Setting>
     <Setting Name="DownloadUrl" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">http://plantumleditor.googlecode.com/files/PlantUMLSetup.exe</Value>
+      <Value Profile="(Default)">http://plantumleditor.googlecode.com/files/PlantUMLSetup.msi</Value>
     </Setting>
     <Setting Name="SetupExeName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">PlantUmlSetup.exe</Value>
+      <Value Profile="(Default)">PlantUmlSetup.msi</Value>
+    </Setting>
+    <Setting Name="VersionFileName" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">Version.txt</Value>
+    </Setting>
+    <Setting Name="VersionFileUrl" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">http://plantumleditor.googlecode.com/files/Version.txt</Value>
     </Setting>
   </Settings>
 </SettingsFile>
