--- a/PlantUmlEditor/app.config
+++ b/PlantUmlEditor/app.config
@@ -1,21 +1,27 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="PlantUmlEditor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
-        </sectionGroup>
-    </configSections>
-    <applicationSettings>
-        <PlantUmlEditor.Properties.Settings>
-            <setting name="PlantUmlJarPath" serializeAs="String">
-                <value>d:\soft\plantuml.jar</value>
-            </setting>
-            <setting name="DownloadUrl" serializeAs="String">
-                <value>http://plantumleditor.googlecode.com/files/PlantUMLSetup.exe</value>
-            </setting>
-            <setting name="SetupExeName" serializeAs="String">
-                <value>PlantUmlSetup.exe</value>
-            </setting>
-        </PlantUmlEditor.Properties.Settings>
-    </applicationSettings>
-<startup><supportedRuntime version="v2.0.50727" sku="Client"/></startup></configuration>
+	<configSections>
+		<sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+			<section name="PlantUmlEditor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+		</sectionGroup>
+	</configSections>
+	<applicationSettings>
+		<PlantUmlEditor.Properties.Settings>
+   <setting name="PlantUmlJarPath" serializeAs="String">
+    <value>d:\soft\plantuml.jar</value>
+   </setting>
+   <setting name="DownloadUrl" serializeAs="String">
+    <value>http://plantumleditor.googlecode.com/files/PlantUMLSetup.msi</value>
+   </setting>
+   <setting name="SetupExeName" serializeAs="String">
+    <value>PlantUmlSetup.msi</value>
+   </setting>
+   <setting name="VersionFileName" serializeAs="String">
+    <value>Version.txt</value>
+   </setting>
+   <setting name="VersionFileUrl" serializeAs="String">
+    <value>http://plantumleditor.googlecode.com/files/Version.txt</value>
+   </setting>
+  </PlantUmlEditor.Properties.Settings>
+	</applicationSettings>
+	<startup/></configuration>
