--- a/PlantUmlEditor/app.config
+++ b/PlantUmlEditor/app.config
@@ -4,17 +4,17 @@
 		<sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
 			<section name="PlantUmlEditor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
 		</sectionGroup>
-	</configSections>
+	 <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+   <section name="PlantUmlEditor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+  </sectionGroup>
+ </configSections>
 	<applicationSettings>
 		<PlantUmlEditor.Properties.Settings>
-   <setting name="PlantUmlJarPath" serializeAs="String">
-    <value>d:\soft\plantuml.jar</value>
-   </setting>
    <setting name="DownloadUrl" serializeAs="String">
-    <value>http://plantumleditor.googlecode.com/files/PlantUMLSetup.msi</value>
+    <value>http://plantumleditor.googlecode.com/files/PlantUMLSetup.exe</value>
    </setting>
    <setting name="SetupExeName" serializeAs="String">
-    <value>PlantUmlSetup.msi</value>
+    <value>PlantUmlSetup.exe</value>
    </setting>
    <setting name="VersionFileName" serializeAs="String">
     <value>Version.txt</value>
@@ -24,4 +24,14 @@
    </setting>
   </PlantUmlEditor.Properties.Settings>
 	</applicationSettings>
-	<startup/></configuration>
+	<startup><supportedRuntime version="v2.0.50727"/></startup><userSettings>
+  <PlantUmlEditor.Properties.Settings>
+   <setting name="LastPath" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="GraphVizLocation" serializeAs="String">
+    <value />
+   </setting>
+  </PlantUmlEditor.Properties.Settings>
+ </userSettings>
+</configuration>
